# SeCloud

./: .gitignore  CMakeLists.txt  README.md
src/: AsyncOperationQueue.cpp  AsyncOperationQueue.h  BackupDaemon.cpp  BackupDaemon.h  BackupServer.cpp  BackupServer.proto  Daemon.cpp  Daemon.h  EncryptionManager.cpp  EncryptionManager.h  LocalBlockDriver.cpp  LocalBlockDriver.h  PasswordManager.cpp  PasswordManager.h  SeCloud.cpp  consts.h  types.h  utils.cpp  utils.h
src/BUSE/: buse.c  buse.h
tests/: EncryptionManagerTest.cpp
